tests/NormalTests/paczka2/big_fuzzy/57650960.err
Error in line 5: mUPp S26 54,3
Error in line 18: K6ADVLFG S26 57,95
Error in line 17: K6ADVLFG A632 5,2
Error in line 19: K6ADVLFG S26 220,2
Error in line 20: K6ADVLFG S464 42,1
Error in line 34: K6ADVLFG A632 73,10
Error in line 32: K6ADVLFG S888 7,8
Error in line 29: JXpE1 S888 70,6
Error in line 38: OcC S888 85,0
Error in line 14: wJOXF A632 78,7
Error in line 40: OcC S464 86,7
Error in line 53: K6ADVLFG S888 28,8
Error in line 50: S26 S888 52,7
Error in line 66: K6ADVLFG A632 42,2
Error in line 77: JXpE1 A632 307,4
Error in line 78: JXpE1 S26 47,9
Error in line 91: wJOXF S464 17,82
Error in line 96: JXpE1 S464 40,2
Error in line 100: S26 S464 79,72
Error in line 107: S26 S464 59,3
Error in line 79: mUPp S888 359,1
Error in line 110: wJOXF S464 184,4
Error in line 122: mUPp S464 48,2
Error in line 133: K6ADVLFG S464 84,7
Error in line 131: R5XczqusTL S26 28,5
Error in line 138: R5XczqusTL S888 30,7
Error in line 136: S26 S888 35,2
Error in line 144: wJOXF A6B2 19,9
Error in line 125: wJOXF S26 88,2
Error in line 152: OcC S26 43,0
Error in line 155: wJOXF S464 -5,9
Error in line 143: S26 A632 30,4
Error in line 154: wJOXF S464 82,4
Error in line 161: R5XczqusTL A632 40,8
Error in line 156: S26 S888 58,0
Error in line 175: mUPp A632 36,9
Error in line 160: K6ADVLFG S888 266,8
Error in line 186: K6ADVLFG S26 22,7
Error in line 196: R5XczqusTL 464 76,0
Error in line 185: mUPp S26 10,6
Error in line 199: wJOXF S26 44,0
Error in line 203: K6ADVLFG S26 33,48
Error in line 219: R5XczqusTL S888 63,2
Error in line 220: K6ADVLFG S888 11,6
Error in line 225: OcC S464 50,2
Error in line 226: K6ADVLFG S464 82,0
Error in line 241: OcC S26 53,7
Error in line 244: OcC S464 71,9
Error in line 245: mUPp S888 86,6
